feat: java 8, precedents args in tab completion, new system to add args